force-app/main/default/objects/Feasibilty__c/Feasibilty__c.object-meta.xml
<CustomObject>
    <label>Feasibilty</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Feasibilty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feasibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>