force-app/main/default/objects/Feasibilty__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feasibilities</relationshipLabel>
    <relationshipName>Feasibilities</relationshipName>
    <type>Lookup</type>
</CustomField>