force-app/main/default/objects/Feasibilty__c/fields/Ad_Format__c.field-meta.xml
<CustomField>
    <fullName>Ad_Format__c</fullName>
    <label>Ad Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>