force-app/main/default/objects/Feasibilty__c/fields/Ad_Slot_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Ad_Slot_Inventory__c</fullName>
    <label>Ad Slot/Inventory Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>