force-app/main/default/objects/Feasibilty__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <label>Advertiser</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>