force-app/main/default/objects/Feasibilty__c/fields/Alphonso_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Alphonso_Targeting__c</fullName>
    <label>LG Ads Targeting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>