force-app/main/default/objects/Feasibilty__c/fields/Asana_URL__c.field-meta.xml
<CustomField>
    <fullName>Asana_URL__c</fullName>
    <label>Asana URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>