force-app/main/default/objects/Feasibilty__c/fields/CPM_CPVC_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>CPM_CPVC_Sale_Price__c</fullName>
    <label>CPM/CPVC Sale Price</label>
    <length>80</length>
    <type>Text</type>
</CustomField>