force-app/main/default/objects/Feasibilty__c/fields/Creative_Notes__c.field-meta.xml
<CustomField>
    <fullName>Creative_Notes__c</fullName>
    <inlineHelpText>Additional note if we&apos;re only running mobile/tablet or something like that</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>