force-app/main/default/objects/Feasibilty__c/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <label>Creative Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>LG Native Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>