force-app/main/default/objects/Feasibilty__c/fields/Extra_Notes__c.field-meta.xml
<CustomField>
    <fullName>Extra_Notes__c</fullName>
    <label>Extra Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>