force-app/main/default/objects/Feasibilty__c/fields/Flight_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Flight_Scheduling__c</fullName>
    <label>Flight Scheduling and Extra Notes</label>
    <type>TextArea</type>
</CustomField>