force-app/main/default/objects/Feasibilty__c/fields/Fraud_Verification_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Verification_Vendor__c</fullName>
    <label>Fraud Verification Vendor</label>
    <type>TextArea</type>
</CustomField>