force-app/main/default/objects/Feasibilty__c/fields/Geo_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Geo_Targeting__c</fullName>
    <label>Geo Targeting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>