force-app/main/default/objects/Feasibilty__c/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <inlineHelpText>What industry does the opp target? Mandatory for Managed Services.</inlineHelpText>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entertainment</fullName>
                <default>true</default>
                <label>Entertainment</label>
            </value>
            <value>
                <fullName>General Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>