force-app/main/default/objects/Feasibilty__c/fields/Max_Avails__c.field-meta.xml
<CustomField>
    <fullName>Max_Avails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Avails</label>
    <type>Checkbox</type>
</CustomField>