force-app/main/default/objects/Feasibilty__c/fields/Max_Quantity_Requested__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity_Requested__c</fullName>
    <label>Expected Budget(Impressions)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>