force-app/main/default/objects/Feasibilty__c/fields/No_of_Carousel_Creatives_for_Native__c.field-meta.xml
<CustomField>
    <fullName>No_of_Carousel_Creatives_for_Native__c</fullName>
    <label>No of Carousel Creatives (for Native)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>