force-app/main/default/objects/Feasibilty__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Feasibilities</relationshipLabel>
    <relationshipName>Feasibilities</relationshipName>
    <type>Lookup</type>
</CustomField>