force-app/main/default/objects/Feasibilty__c/fields/OS_Targeting__c.field-meta.xml
<CustomField>
    <fullName>OS_Targeting__c</fullName>
    <label>OS Targeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Os3.0</fullName>
            </value>
            <value>
                <fullName>Os3.5</fullName>
            </value>
            <value>
                <fullName>Os4.0</fullName>
            </value>
            <value>
                <fullName>Os4.5</fullName>
            </value>
            <value>
                <fullName>Os5.0</fullName>
            </value>
            <value>
                <fullName>Os22</fullName>
            </value>
            <value>
                <fullName>Os23</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>