force-app/main/default/objects/Feasibilty__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
                <label>Urgent(within few hrs)</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Medium(&lt;1day)</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>Low(&gt;1day)</label>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>