force-app/main/default/objects/Feasibilty__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross Screen Display</fullName>
            </value>
            <value>
                <fullName>Cross Screen Video</fullName>
            </value>
            <value>
                <fullName>Cross Screen Video - Last Impression Takeover</fullName>
            </value>
            <value>
                <fullName>CTV Video</fullName>
            </value>
            <value>
                <fullName>LG Native</fullName>
            </value>
            <value>
                <fullName>LG Native - 12 HR Takeover</fullName>
            </value>
            <value>
                <fullName>LG Native - 24 HR Takeover</fullName>
            </value>
            <value>
                <fullName>LG Native - 6 HR Takeover</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>