force-app/main/default/objects/Feasibilty__c/fields/Research_Study__c.field-meta.xml
<CustomField>
    <fullName>Research_Study__c</fullName>
    <label>Research Study</label>
    <type>TextArea</type>
</CustomField>