force-app/main/default/objects/Feasibilty__c/fields/RFP_Briefs__c.field-meta.xml
<CustomField>
    <fullName>RFP_Briefs__c</fullName>
    <label>RFP Briefs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>