force-app/main/default/objects/Feasibilty__c/fields/RFP_Link__c.field-meta.xml
<CustomField>
    <fullName>RFP_Link__c</fullName>
    <label>RFP Link</label>
    <type>Url</type>
</CustomField>