force-app/main/default/objects/Feasibilty__c/fields/Screen_Types__c.field-meta.xml
<CustomField>
    <fullName>Screen_Types__c</fullName>
    <label>Screen Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTV</fullName>
            </value>
            <value>
                <fullName>Mobile/Tablet</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>All Screen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>