force-app/main/default/objects/Feasibilty__c/fields/segment_task_URL__c.field-meta.xml
<CustomField>
    <fullName>segment_task_URL__c</fullName>
    <label>Segment task URL</label>
    <type>Url</type>
</CustomField>