force-app/main/default/objects/Feasibilty__c/fields/Special_Occasion__c.field-meta.xml
<CustomField>
    <fullName>Special_Occasion__c</fullName>
    <inlineHelpText>Superbowl, Thanksgiving etc</inlineHelpText>
    <label>Special Occasion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>