force-app/main/default/objects/Feasibilty__c/fields/Targeting_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>Targeting_File_Upload__c</fullName>
    <label>Targeting File Upload</label>
    <type>Url</type>
</CustomField>