force-app/main/default/objects/Feasibilty__c/fields/Type_of__c.field-meta.xml
<CustomField>
    <fullName>Type_of__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Non-Entertainment</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>