force-app/main/default/objects/Feasibilty__c/fields/Type_of_Carousal_Creatives__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Carousal_Creatives__c</fullName>
    <label>Type of Carousal Creatives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Companion</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>