force-app/main/default/objects/Feasibilty__c/fields/Viewability_Guarantee_Terms__c.field-meta.xml
<CustomField>
    <fullName>Viewability_Guarantee_Terms__c</fullName>
    <label>Viewability Guarantee Terms</label>
    <type>TextArea</type>
</CustomField>