force-app/main/default/objects/Feasibilty__c/fields/Viewability_Verification_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Viewability_Verification_Vendor__c</fullName>
    <label>Viewability Verification Vendor</label>
    <type>TextArea</type>
</CustomField>