force-app/main/default/objects/Feasibilty__c/fields/X3rd_Party_Targetting__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Targetting__c</fullName>
    <label>3rd Party Targetting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>