force-app/main/default/objects/Feasibilty__c/fields/X3rd_Party_Verification_Requirement__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Verification_Requirement__c</fullName>
    <label>3rd Party Verification Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>